# misc

./: .gitignore  .gitmodules  LICENSE  README.md
acpp/: .gitignore  CmakeLists.txt  acpp.his  acpp.txt  app09.cfg  app68k.cfg  license.txt  readme.txt
as63/: as63.txt  readme.txt
asm68k/: asm68k.txt  readme.txt
binat/: binat.txt  readme.txt
c2htm/: c2htm-history.txt  c2htm-readme.txt  c2htm.html  readme.txt
caj/: caj.txt  caj104.zzz  readme.txt
chr2lin/: CmakeLists.txt  ExArgv.c  ExArgv.h  chr2lin.c  chr2lin.txt  mbc.c  mk.bat  readme.txt  subr.c  subr.h
css2b/: csstob.txt  mk.bat  readme.txt
czenyen/: czenyen.txt  mk.bat  mk16.bat  readme.txt
ectab/: .gitignore  CmakeLists.txt  bld.bat  ectab.txt  ectab_his.txt  readme.txt
esupath/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
esupath/src/: besupath.bat  cmd_line_args.hpp  esupath.cpp  vmk.bat
esupath/src/batch/: coreutilsPrio.bat
fdatecpy/: fdatecpy.c  fdatecpy.txt  mk.bat  readme.txt
genfnttex/: .gitignore  genfnttex.txt  genfnttex_his.txt  readme.txt
getFD2Dos9/: getFD2D_os9img2file.txt  readme.txt
knjt/: convJisUcMap.txt  jisno_to_msUCS2_tbl.c  knj.t  knjt.txt  kt1.txt  readme.txt
mwfnd/: bc_mk.bat  bc_mk16.bat  mk.bat  mk.sh  mwfnd  mwfnd.c  mwfnd.txt  mwfnd_his.txt  readme.txt
redate_dir/: .gitignore  CMakeLists.txt  readme.txt  redate_dir.vcproj  stdafx.h
supath/: .gitignore  supath.cpp  supath.txt  vmk.bat
tee/: readme.txt
txt2cstr/: .gitignore  CmakeLists.txt  readme.txt  txt2cstr.txt
txt2str/: cmisc.cpp  readme.txt  txt2cstr.txt
wc/: CmakeLists.txt  wc.c  (+5 more)
(+279 files in other folders)
